Fix the issues with delete!